# pylith

./: .gitignore  .gitmodules  Makefile  config.status  configure.ac  libtool  portinfo
applications/: Makefile  pylith
applications/utilities/: Makefile  pylith_eqinfo  pylith_genxdmf  pylith_info
code-architecture-guide/: 01-Architecture-Overview.md  02-Core-Components.md  03-Data-Flow.md  04-Build-System.md  05-Module-Structure.md  06-Finite-Element-Implementation.md  07-Extension-Guide.md  INDEX.md  QUICK-REFERENCE.md  README.md  SUMMARY.md
developer/: Makefile
doc/: Makefile
doc-latex/: Makefile.am
doc/install/: Makefile
doc/releasenotes/: Makefile
doc/userguide/: Makefile
examples/: Makefile  Makefile.am
examples/2d/: Makefile  Makefile.am
examples/3d/: Makefile
examples/bar_shearwave/: Makefile
examples/barwaves_poro-2d/: bc.jou  pylithapp.cfg  quad_200m.exo  quad_50m.exo  quad_50m.jou  tri_200m.exo
examples/magma-2d/: Makefile.am  geometry.jou  mesh_quad.exo  mesh_quad.jou  mesh_tri.exo  mesh_tri.jou  pylithapp.cfg
examples/meshing/: Makefile
examples/point-source-2d/: Makefile.am  README.md  pylithapp.cfg  step01_explosion.cfg  step02_strikeslip.cfg  step03_multiple.cfg  step04_ramp.cfg  step05_step.cfg
examples/poro-box-3d/: bc_xneg_disp_x.spatialdb  bc_xneg_disp_y.spatialdb  bc_xneg_disp_z.spatialdb  bc_xpos_disp_x.spatialdb  bc_xpos_disp_y.spatialdb  bc_xpos_disp_z.spatialdb  bc_yneg_disp_x.spatialdb  bc_yneg_disp_y.spatialdb  bc_yneg_disp_z.spatialdb  bc_ypos_disp_x.spatialdb  bc_ypos_disp_y.spatialdb  bc_ypos_disp_z.spatialdb  bc_zneg_disp_x.spatialdb  bc_zneg_disp_y.spatialdb  bc_zneg_disp_z.spatialdb  bc_zpos_disp_x.spatialdb  bc_zpos_disp_y.spatialdb  bc_zpos_disp_z.spatialdb  generate_bc.py  generate_gmsh.py  generate_gmsh_contained_aquifer.py  generate_gmsh_oversized.py  generate_ic_sandbox.py  mesh_hex.msh  pylithapp.cfg  step01_gravity.cfg  step02_confined_aquifer.cfg  time_history_x.timedb  time_history_y.timedb  time_history_z.timedb
examples/poro_fault_ss-2d/: MMS_ic.spatialdb  bc_xneg_disp.spatialdb  bc_xneg_pres.spatialdb  bc_xpos_disp.spatialdb  bc_xpos_pres.spatialdb  bc_yneg_disp.spatialdb  bc_yneg_pres.spatialdb  bc_ypos_disp.spatialdb  bc_ypos_pres.spatialdb  createbc.jou  cubit01.jou  generate_bc.py  generate_gmsh.py  generate_ic.py  generate_ic_SPE10.py  generate_ic_sandbox.py  geometry.jou  gradient.jou  mesh_quad.exo  mesh_quad.jou  mesh_tri.exo  pylithapp.cfg  step01_slip_cubit.cfg  step01_slip_cubit_MMS.cfg  time_history.timedb
examples/poroelastic-strikeslip-2d/: pylithapp.cfg
examples/poroelastic_material_ss-2d/: mat_poroelastic_ss2d.cfg  pylithapp.cfg  step02_coseismic.cfg
examples/subduction-2d/: pylithapp.cfg  step01_coseismic.cfg
examples/subduction-3d/: Makefile.am
examples/troubleshooting/: Makefile
gmsh-models/: README.md
gmsh-models/examples/: __init__.py
gmsh-models/tests/: __init__.py  test_mesh_generation.py  test_pylith_integration.py
libsrc/: Makefile
libsrc/pylith/: Makefile  Makefile.am  libpylith.la
libsrc/pylith/faults/: AuxiliaryFactoryKinematic.cc  AuxiliaryFactoryKinematic.hh  AuxiliaryFactoryKinematic.lo  AuxiliaryFactoryKinematicPoro.cc  AuxiliaryFactoryKinematicPoro.hh  AuxiliaryFactoryPointSource.cc  FaultCohesive.hh  FaultCohesive.lo  FaultCohesiveKin.cc  FaultCohesiveKin.lo  FaultCohesiveKinPoro.cc  FaultCohesiveKinPoro.hh  FaultCohesiveKinTrivial.cc  FaultCohesivePoro.cc  FaultCohesivePoro.hh  FaultCohesivePoroKin.cc  FaultCohesivePoroKin.hh  FaultPoroCohesiveKin.cc  FaultPoroCohesiveKin.hh  FaultPoroDiffusionCohesiveKin.cc  FaultPoroDiffusionCohesiveKin.hh  KinSrc.cc  KinSrc.hh  KinSrc.lo  KinSrcAuxiliaryFactory.cc  KinSrcAuxiliaryFactory.hh  KinSrcAuxiliaryFactory.lo  KinSrcConstRate.lo  KinSrcPoro.cc  KinSrcPoro.hh  KinSrcPoroAuxiliaryFactory.cc  KinSrcPoroAuxiliaryFactory.hh  KinSrcPoroStep.cc  KinSrcPoroStep.hh  KinSrcStep.cc  KinSrcStep.hh  KinSrcStep.lo  Makefile  Makefile.am  PointSource.cc  (+5 more)
libsrc/pylith/faults/.deps/: AuxiliaryFactoryKinematic.Plo  FaultCohesive.Plo  FaultCohesiveKin.Plo  KinSrc.Plo  KinSrcAuxiliaryFactory.Plo  KinSrcConstRate.Plo  KinSrcStep.Plo  TopologyOps.Plo
modulesrc/: Makefile  Makefile.am
modulesrc/bc/: AbsorbingDampers.i  Makefile  _bcmodule.la  bc_wrap.lo
modulesrc/faults/: FaultCohesiveKin.i  FaultCohesiveKinPoro.i  FaultCohesivePoro.i  FaultCohesivePoroKin.i  FaultPoroCohesiveKin.i  FaultPoroDiffusionCohesiveKin.i  KinSrcPoro.i  KinSrcPoroStep.i  Makefile  Makefile.am  PointSource.i  _faultsmodule.la  (+2 more)
modulesrc/sources/: Makefile.am  PointForce.i  WellboreSource.i  sources.i
pylith/: Makefile  Makefile.am  __init__.py
share/: Makefile
templates/: Makefile
tests/: Makefile  Makefile.am
tests/fullscale/heat/nofaults-2d/: Makefile.am  TestHeatBar.py  heatbar_quad.cfg  heatbar_soln.py  heatbar_tri.cfg  mesh_quad.mesh  mesh_tri.mesh  meshes.py  pylithapp.cfg  test_pylith.py
tests/fullscale/linearelasticity/pointsource-2d/: Makefile.am  TestPointSource.py  mesh_quad.cfg  mesh_tri.cfg  meshes.py  pointsource_explosion.cfg  pointsource_soln.py  pointsource_strikeslip.cfg  pylithapp.cfg  test_pylith.py
tests/fullscale/linearelasticity/pointsource-2d/mesh/: domain.geo
tests/fullscale/thermoelasticity/nofaults-2d/: Makefile.am  TestThermoBar.py  mesh_quad.mesh  mesh_tri.mesh  meshes.py  pylithapp.cfg  test_pylith.py  thermobar_quad.cfg  thermobar_soln.py  thermobar_tri.cfg
tests/mmstests/linearelasticity/pointsource-2d/: Makefile.am  PointForceExplosion2D.cc  PointForceExplosion2D.hh  TestCases.cc  TestPointForce.cc  TestPointForce.hh
tests/mmstests/thermoelasticity/nofaults-2d/: Makefile.am  TestCases.cc  TestThermoelasticity.cc  TestThermoelasticity.hh  UniformThermoelasticity2D.cc  UniformThermoelasticity2D.hh
tests/mmstests/thermoporoelasticity/nofaults-2d/: Makefile.am  TestThermoporoelasticity.cc  TestThermoporoelasticity.hh
tests/pytests/sources/: Makefile.am  TestPointMomentTensor.py  TestSourceTimeFunction.py  __init__.py
tests/pytests/sources/data/: Makefile.am  test_timehistory.timedb
(+1522 files in other folders)
