# =================================================================================================
# This code is part of PyLith, developed through the Computational Infrastructure
# for Geodynamics (https://github.com/geodynamics/pylith).
#
# Copyright (c) 2010-2025, University of California, Davis and the PyLith Development Team.
# All rights reserved.
#
# See https://mit-license.org/ and LICENSE.md and for license information. 
# =================================================================================================

dist_noinst_DATA = \
	README.md \
	pylithapp.cfg \
	step01_explosion.cfg \
	step02_strikeslip.cfg \
	step03_multiple.cfg \
	step04_ramp.cfg \
	step05_step.cfg

# End of file
