# =================================================================================================
# This code is part of PyLith, developed through the Computational Infrastructure
# for Geodynamics (https://github.com/geodynamics/pylith).
#
# Copyright (c) 2010-2025, University of California, Davis and the PyLith Development Team.
# All rights reserved.
#
# See https://mit-license.org/ and LICENSE.md and for license information. 
# =================================================================================================


subpackage = faults
include $(top_srcdir)/subpackage.am

subpkginclude_HEADERS = \
	FaultCohesive.hh \
	FaultCohesiveKin.hh \
	FaultCohesiveKinPoro.hh \
	FaultCohesiveImpulses.hh \
	AuxiliaryFieldFactory.hh \
	DiagnosticFieldFactory.hh \
	DerivedFieldFactory.hh \
	FaultOps.hh \
	KinSrc.hh \
	KinSrcPoro.hh \
	KinSrcStep.hh \
	KinSrcPoroStep.hh \
	KinSrcRamp.hh \
	KinSrcConstRate.hh \
	KinSrcBrune.hh \
	KinSrcLiuCos.hh \
	KinSrcTimeHistory.hh \
	KinSrcAuxiliaryFactory.hh \
	KinSrcPoroAuxiliaryFactory.hh \
	AuxiliaryFactoryKinematicPoro.hh \
	faultsfwd.hh

dist_noinst_HEADERS = \
	TopologyOps.hh


# End of file
