# =================================================================================================
# This code is part of PyLith, developed through the Computational Infrastructure
# for Geodynamics (https://github.com/geodynamics/pylith).
#
# Copyright (c) 2010-2025, University of California, Davis and the PyLith Development Team.
# All rights reserved.
#
# See https://mit-license.org/ and LICENSE.md and for license information. 
# =================================================================================================

TESTS = \
	TestSourceTimeFunction.py \
	TestPointMomentTensor.py

dist_check_SCRIPTS = $(TESTS)

dist_noinst_PYTHON = \
	__init__.py

noinst_DATA = 

SUBDIRS = data

# End of file
