# =================================================================================================
# This code is part of PyLith, developed through the Computational Infrastructure
# for Geodynamics (https://github.com/geodynamics/pylith).
#
# Copyright (c) 2010-2025, University of California, Davis and the PyLith Development Team.
# All rights reserved.
#
# See https://mit-license.org/ and LICENSE.md and for license information. 
# =================================================================================================

include $(top_srcdir)/tests/check_catch2.am

TESTS = 

noinst_HEADERS = \
	TestThermoporoelasticity.hh

# Note: TestCases.cc is intentionally omitted until tests are complete

dist_noinst_DATA = \
	data/tri.mesh \
	data/quad.mesh


# End of file
